fix bug: gap items not included

--- a/src/components/GoalContainer/components/Goal/Goal.module.scss
+++ b/src/components/GoalContainer/components/Goal/Goal.module.scss
@@ -1,4 +1,3 @@
 .line {
     display: flex;
-    gap: 2px;
 }
